--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.1.1",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.1.1",
+    "serve": "^6.4.1",
     "style-loader": "0.19.0",
     "stylelint": "^8.2.0",
     "stylelint-config-sass-guidelines": "^4.0.1",
@@ -51,7 +52,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "serve": "serve -s build -p 3000"
   },
   "repository": {
     "type": "git",
