--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^16.1.1",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.1.1",
+    "react-hot-loader": "^3.1.3",
     "serve": "^6.4.1",
     "style-loader": "0.19.0",
     "stylelint": "^8.2.0",
