--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
+    "babel-plugin-react-css-modules": "^3.3.2",
     "babel-preset-react-app": "^3.1.0",
     "babel-runtime": "6.26.0",
     "bootstrap-sass": "^3.3.7",
@@ -25,17 +26,20 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
+    "html-webpack-plugin": "2.30.1",
     "jest": "20.0.4",
+    "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
+    "postcss-scss": "^1.0.2",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.1.1",
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.1.1",
     "react-hot-loader": "^3.1.3",
+    "sass-loader": "^6.0.6",
     "serve": "^6.4.1",
     "style-loader": "0.19.0",
     "stylelint": "^8.2.0",
@@ -98,6 +102,19 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      [
+        "react-css-modules",
+        {
+          "filetypes": {
+            ".scss": {
+              "syntax": "postcss-scss"
+            }
+          },
+          "generateScopedName": "[local]___[hash:base64:5]"
+        }
+      ]
     ]
   },
   "eslintConfig": {
@@ -127,7 +144,15 @@
           ]
         }
       ],
-      "selector-class-pattern": "^[a-zA-Z0-9\\-]+$"
+      "selector-class-pattern": "^[a-zA-Z0-9\\-]+$",
+      "selector-pseudo-class-no-unknown": [
+        true,
+        {
+          "ignorePseudoClasses": [
+            "global"
+          ]
+        }
+      ]
     }
   }
 }
