--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "flow-bin": "^0.59.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.30.1",
     "jest": "20.0.4",
@@ -58,7 +59,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "serve": "serve -s build -p 3000"
+    "serve": "serve -s build -p 3000",
+    "flow": "flow"
   },
   "repository": {
     "type": "git",
