--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.30.1",
     "jest": "20.0.4",
+    "jest-fetch-mock": "^1.3.3",
+    "lodash": "^4.17.4",
     "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
