--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.1.1",
     "react-hot-loader": "^3.1.3",
+    "react-transition-group": "^2.2.1",
     "sass-loader": "^6.0.6",
     "serve": "^6.4.1",
     "style-loader": "0.19.0",
