--- a/package.json
+++ b/package.json
@@ -13,58 +13,58 @@
   },
   "homepage": "https://github.com/narr/react-redux-rxjs/blob/master/README.md",
   "devDependencies": {
-    "@commitlint/cli": "^7.0.0",
-    "@commitlint/config-conventional": "^7.0.1",
-    "@material-ui/core": "^1.4.2",
-    "@types/enzyme": "^3.1.12",
-    "@types/enzyme-adapter-react-16": "^1.0.2",
-    "@types/jest": "^22.2.3",
-    "@types/lodash": "^4.14.115",
-    "@types/prop-types": "^15.5.4",
-    "@types/react": "^16.4.7",
-    "@types/react-dom": "^16.0.6",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^5.2.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "jest": "^22.4.4",
-    "jest-environment-enzyme": "^6.0.2",
-    "jest-enzyme": "^6.0.2",
-    "lerna": "^2.11.0",
-    "lodash": "^4.17.10",
-    "prettier": "^1.14.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "styled-components": "^3.3.3",
-    "ts-jest": "^22.4.6",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.14.0",
-    "tslint-plugin-prettier": "^1.3.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "^2.9.2"
+    "@commitlint/cli": "7.0.0",
+    "@commitlint/config-conventional": "7.0.1",
+    "@material-ui/core": "1.4.2",
+    "@types/enzyme": "3.1.13",
+    "@types/enzyme-adapter-react-16": "1.0.3",
+    "@types/jest": "22.2.3",
+    "@types/lodash": "4.14.116",
+    "@types/prop-types": "15.5.4",
+    "@types/react": "16.4.7",
+    "@types/react-dom": "16.0.6",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
+    "eslint": "5.3.0",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-plugin-prettier": "2.6.2",
+    "jest": "22.4.4",
+    "jest-environment-enzyme": "6.0.2",
+    "jest-enzyme": "6.0.2",
+    "lerna": "2.11.0",
+    "lodash": "4.17.10",
+    "prettier": "1.14.0",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "styled-components": "3.4.0",
+    "ts-jest": "22.4.6",
+    "tslint": "5.11.0",
+    "tslint-config-prettier": "1.14.0",
+    "tslint-plugin-prettier": "1.3.0",
+    "tslint-react": "3.6.0",
+    "typescript": "2.9.2"
   },
   "optionalDependencies": {
-    "@storybook/addon-info": "^3.4.8",
-    "@storybook/addon-knobs": "^3.4.8",
-    "@storybook/addon-options": "^3.4.8",
-    "@storybook/react": "^3.4.8",
-    "@types/node": "^10.5.4",
-    "@types/storybook__addon-actions": "^3.4.0",
-    "@types/storybook__addon-info": "^3.2.3",
-    "@types/storybook__addon-knobs": "^3.3.1",
-    "@types/storybook__react": "^3.0.8",
-    "babel-core": "^6.26.3",
-    "babel-preset-react-app": "^3.1.2",
-    "commitizen": "^2.10.1",
-    "cz-conventional-changelog": "^2.1.0",
-    "fork-ts-checker-webpack-plugin": "^0.4.3",
-    "husky": "^0.14.3",
-    "jest-html-reporter": "^2.4.2",
-    "lint-staged": "^7.2.0",
-    "react-live": "^1.11.0",
-    "rimraf": "^2.6.2",
-    "ts-loader": "^3.5.0"
+    "@storybook/addon-info": "3.4.10",
+    "@storybook/addon-knobs": "3.4.10",
+    "@storybook/addon-options": "3.4.10",
+    "@storybook/react": "3.4.10",
+    "@types/node": "10.5.6",
+    "@types/storybook__addon-actions": "3.4.0",
+    "@types/storybook__addon-info": "3.4.0",
+    "@types/storybook__addon-knobs": "3.3.1",
+    "@types/storybook__react": "3.0.8",
+    "babel-core": "6.26.3",
+    "babel-preset-react-app": "3.1.2",
+    "commitizen": "2.10.1",
+    "cz-conventional-changelog": "2.1.0",
+    "fork-ts-checker-webpack-plugin": "0.4.4",
+    "husky": "0.14.3",
+    "jest-html-reporter": "2.4.2",
+    "lint-staged": "7.2.0",
+    "react-live": "1.11.0",
+    "rimraf": "2.6.2",
+    "ts-loader": "3.5.0"
   },
   "scripts": {
     "cm": "git-cz",
