--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/storybook__addon-knobs": "3.3.1",
     "@types/storybook__react": "3.0.8",
     "babel-core": "6.26.3",
+    "babel-loader": "7.1.5",
     "babel-preset-react-app": "3.1.2",
     "commitizen": "2.10.1",
     "cz-conventional-changelog": "2.1.0",
@@ -62,9 +63,13 @@
     "husky": "0.14.3",
     "jest-html-reporter": "2.4.2",
     "lint-staged": "7.2.0",
+    "react-hot-loader": "4.3.4",
     "react-live": "1.11.0",
     "rimraf": "2.6.2",
-    "ts-loader": "3.5.0"
+    "ts-loader": "3.5.0",
+    "webpack": "3.12.0",
+    "webpack-bundle-analyzer": "2.13.1",
+    "webpack-dev-server": "2.11.2"
   },
   "scripts": {
     "cm": "git-cz",
@@ -83,10 +88,11 @@
     "storybook:build": "build-storybook -c ./config/.storybook -o ./docs/storybook",
     "doc": "rimraf ./docs && npm run test:doc && npm run storybook:build",
     "build:comp": "rimraf ./packages/components/dist && tsc -p ./config/typescript/tsconfig.prod.comp.json",
-    "build": "echo build for static folder",
     "pub": "npm run build:comp && lerna publish --conventional-commits",
     "pub:test": "npm run pub -- --skip-git --skip-npm",
-    "pub:ci": "npm run pub -- --yes"
+    "pub:ci": "npm run pub -- --yes",
+    "start": "webpack-dev-server --config ./config/webpack/webpack.config.dev.js",
+    "build": "rimraf ./static && webpack --config ./config/webpack/webpack.config.prod.js"
   },
   "private": true,
   "config": {
