chore(tsconfig): rename tsconifg files for a component build

--- a/config/typescript/tsconfig.build.comp.json
+++ b/config/typescript/tsconfig.build.comp.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.prod",
+  "extends": "./tsconfig.build",
   "compilerOptions": {
     "outDir": "../../packages/components/dist",
     "rootDir": "../../packages/components/src"
