--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/enzyme-adapter-react-16": "1.0.3",
     "@types/jest": "22.2.3",
     "@types/lodash": "4.14.116",
+    "@types/object-assign": "4.0.30",
     "@types/prop-types": "15.5.4",
     "@types/react": "16.4.7",
     "@types/react-dom": "16.0.6",
@@ -33,7 +34,9 @@
     "jest-enzyme": "6.0.2",
     "lerna": "2.11.0",
     "lodash": "4.17.10",
+    "object-assign": "4.1.1",
     "prettier": "1.14.0",
+    "promise": "8.0.1",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "styled-components": "3.4.0",
@@ -58,18 +61,24 @@
     "babel-loader": "7.1.5",
     "babel-preset-react-app": "3.1.2",
     "commitizen": "2.10.1",
+    "compression": "1.7.3",
     "cz-conventional-changelog": "2.1.0",
+    "event-source-polyfill": "0.0.12",
+    "express": "4.16.3",
     "fork-ts-checker-webpack-plugin": "0.4.4",
+    "http-proxy-middleware": "0.18.0",
     "husky": "0.14.3",
     "jest-html-reporter": "2.4.2",
     "lint-staged": "7.2.0",
+    "morgan": "1.9.0",
     "react-hot-loader": "4.3.4",
     "react-live": "1.11.0",
     "rimraf": "2.6.2",
     "ts-loader": "3.5.0",
     "webpack": "3.12.0",
     "webpack-bundle-analyzer": "2.13.1",
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-middleware": "2.0.6",
+    "webpack-hot-middleware": "2.22.3"
   },
   "scripts": {
     "cm": "git-cz",
@@ -91,7 +100,7 @@
     "pub": "npm run build:comp && lerna publish --conventional-commits",
     "pub:test": "npm run pub -- --skip-git --skip-npm",
     "pub:ci": "npm run pub -- --yes",
-    "start": "webpack-dev-server --config ./config/webpack/webpack.config.dev.js",
+    "start": "node ./server",
     "build": "rimraf ./static && webpack --config ./config/webpack/webpack.config.prod.js"
   },
   "private": true,
