--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "cz-conventional-changelog": "2.1.0",
     "event-source-polyfill": "0.0.12",
     "express": "4.16.3",
+    "file-loader": "1.1.11",
     "fork-ts-checker-webpack-plugin": "0.4.4",
     "http-proxy-middleware": "0.18.0",
     "husky": "0.14.3",
@@ -75,6 +76,7 @@
     "react-live": "1.11.0",
     "rimraf": "2.6.2",
     "ts-loader": "3.5.0",
+    "url-loader": "1.0.1",
     "webpack": "3.12.0",
     "webpack-bundle-analyzer": "2.13.1",
     "webpack-dev-middleware": "2.0.6",
