ci(package.json): add typecheck script

--- a/package.json
+++ b/package.json
@@ -86,9 +86,10 @@
     "cm": "git-cz",
     "precommit": "lint-staged",
     "commitmsg": "commitlint -E GIT_PARAMS",
+    "typecheck": "tsc --noEmit",
     "tslint": "tslint -c ./tslint.json -p ./",
     "eslint": "eslint \"**/*.js\"",
-    "lint": "npm run tslint && npm run eslint",
+    "lint": "npm run typecheck && npm run tslint && npm run eslint",
     "test": "jest --config=./config/jest/jest.config.js --coverage",
     "test:watch": "npm test -- --watch",
     "test:ci": "npm test -- --bail",
