--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/prop-types": "15.5.4",
     "@types/react": "16.4.7",
     "@types/react-dom": "16.0.6",
+    "@types/react-redux": "6.0.6",
+    "@types/redux-mock-store": "1.0.0",
     "@types/storybook__addon-actions": "3.4.0",
     "@types/storybook__addon-info": "3.4.0",
     "@types/storybook__addon-knobs": "3.3.1",
@@ -46,6 +48,10 @@
     "react-dom": "16.4.2",
     "react-hot-loader": "4.3.4",
     "react-live": "1.11.0",
+    "react-redux": "5.0.7",
+    "redux": "4.0.0",
+    "redux-devtools-extension": "2.13.5",
+    "redux-mock-store": "1.5.3",
     "styled-components": "3.4.0",
     "ts-jest": "22.4.6",
     "tslint": "5.11.0",
@@ -123,6 +129,9 @@
       "@commitlint/config-conventional"
     ],
     "rules": {
+      "scope-case": [
+        0
+      ],
       "header-max-length": [
         2,
         "always",
