feat(rxjs): add rxjs
#1

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/enzyme-adapter-react-16": "1.0.3",
     "@types/jest": "22.2.3",
     "@types/lodash": "4.14.116",
+    "@types/nock": "9.3.0",
     "@types/node": "10.5.8",
     "@types/object-assign": "4.0.30",
     "@types/prop-types": "15.5.5",
@@ -31,6 +32,7 @@
     "@types/storybook__addon-info": "3.4.1",
     "@types/storybook__addon-knobs": "3.4.1",
     "@types/storybook__react": "3.0.9",
+    "axios": "0.18.0",
     "enzyme": "3.4.1",
     "enzyme-adapter-react-16": "1.2.0",
     "eslint": "5.3.0",
@@ -41,6 +43,7 @@
     "jest-enzyme": "6.0.3",
     "lerna": "2.11.0",
     "lodash": "4.17.10",
+    "nock": "9.6.0",
     "object-assign": "4.1.1",
     "prettier": "1.14.2",
     "promise": "8.0.1",
@@ -52,6 +55,9 @@
     "redux": "4.0.0",
     "redux-devtools-extension": "2.13.5",
     "redux-mock-store": "1.5.3",
+    "redux-observable": "1.0.0",
+    "reselect": "3.0.1",
+    "rxjs": "6.2.2",
     "styled-components": "3.4.2",
     "ts-jest": "22.4.6",
     "tslint": "5.11.0",
@@ -78,7 +84,7 @@
     "http-proxy-middleware": "0.18.0",
     "husky": "0.14.3",
     "jest-html-reporter": "2.4.2",
-    "lint-staged": "7.2.0",
+    "lint-staged": "7.2.2",
     "morgan": "1.9.0",
     "rimraf": "2.6.2",
     "ts-loader": "3.5.0",
