--- a/package.json
+++ b/package.json
@@ -12,113 +12,90 @@
     "url": "https://github.com/narr/react-redux-rxjs/issues"
   },
   "homepage": "https://github.com/narr/react-redux-rxjs/blob/master/README.md",
-  "devDependencies": {
-    "@commitlint/cli": "7.0.0",
-    "@commitlint/config-conventional": "7.0.1",
-    "@material-ui/core": "1.4.3",
-    "@types/enzyme": "3.1.13",
-    "@types/enzyme-adapter-react-16": "1.0.3",
-    "@types/jest": "22.2.3",
-    "@types/lodash": "4.14.116",
-    "@types/nock": "9.3.0",
-    "@types/node": "10.5.8",
-    "@types/object-assign": "4.0.30",
-    "@types/prop-types": "15.5.5",
-    "@types/react": "16.4.9",
-    "@types/react-dom": "16.0.7",
-    "@types/react-redux": "6.0.6",
-    "@types/redux-mock-store": "1.0.0",
-    "@types/storybook__addon-actions": "3.4.1",
-    "@types/storybook__addon-info": "3.4.1",
-    "@types/storybook__addon-knobs": "3.4.1",
-    "@types/storybook__react": "3.0.9",
-    "axios": "0.18.0",
-    "enzyme": "3.4.1",
-    "enzyme-adapter-react-16": "1.2.0",
-    "eslint": "5.3.0",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-plugin-prettier": "2.6.2",
-    "jest": "22.4.4",
-    "jest-environment-enzyme": "6.0.3",
-    "jest-enzyme": "6.0.3",
-    "lerna": "2.11.0",
-    "lodash": "4.17.10",
-    "nock": "9.6.0",
-    "object-assign": "4.1.1",
-    "prettier": "1.14.2",
-    "promise": "8.0.1",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
-    "react-hot-loader": "4.3.4",
-    "react-live": "1.11.0",
-    "react-redux": "5.0.7",
-    "redux": "4.0.0",
-    "redux-devtools-extension": "2.13.5",
-    "redux-mock-store": "1.5.3",
-    "redux-observable": "1.0.0",
-    "reselect": "3.0.1",
-    "rxjs": "6.2.2",
-    "styled-components": "3.4.2",
-    "ts-jest": "22.4.6",
-    "tslint": "5.11.0",
-    "tslint-config-prettier": "1.14.0",
-    "tslint-plugin-prettier": "1.3.0",
-    "tslint-react": "3.6.0",
-    "typescript": "2.9.2"
+  "engines": {
+    "node": ">=8.11.3"
   },
-  "optionalDependencies": {
-    "@storybook/addon-info": "3.4.10",
-    "@storybook/addon-knobs": "3.4.10",
-    "@storybook/addon-options": "3.4.10",
-    "@storybook/react": "3.4.10",
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.5",
-    "babel-preset-react-app": "3.1.2",
-    "commitizen": "2.10.1",
-    "compression": "1.7.3",
-    "cz-conventional-changelog": "2.1.0",
-    "event-source-polyfill": "0.0.12",
-    "express": "4.16.3",
-    "file-loader": "1.1.11",
-    "fork-ts-checker-webpack-plugin": "0.4.8",
-    "http-proxy-middleware": "0.18.0",
-    "husky": "0.14.3",
-    "jest-html-reporter": "2.4.2",
-    "lint-staged": "7.2.2",
-    "morgan": "1.9.0",
-    "rimraf": "2.6.2",
-    "ts-loader": "3.5.0",
-    "url-loader": "1.0.1",
-    "webpack": "3.12.0",
-    "webpack-bundle-analyzer": "2.13.1",
-    "webpack-dev-middleware": "2.0.6",
-    "webpack-hot-middleware": "2.22.3"
+  "devDependencies": {
+    "@commitlint/cli": "^7.3.2",
+    "@commitlint/config-conventional": "^7.3.1",
+    "@material-ui/core": "^3.9.0",
+    "@storybook/addon-options": "^4.1.7",
+    "@storybook/react": "^4.1.7",
+    "@types/enzyme": "^3.1.15",
+    "@types/jest": "^23.3.13",
+    "@types/storybook__react": "^4.0.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "commitizen": "^3.0.5",
+    "compression": "^1.7.3",
+    "cpy-cli": "^2.0.0",
+    "cz-conventional-changelog": "^2.1.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "eslint": "^5.12.1",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "event-source-polyfill": "^1.0.5",
+    "express": "^4.16.4",
+    "http-proxy-middleware": "^0.19.1",
+    "husky": "^1.3.1",
+    "jest": "^22.4.4",
+    "jest-environment-enzyme": "^7.0.1",
+    "jest-enzyme": "^7.0.1",
+    "jest-html-reporter": "^2.4.3",
+    "lerna": "^3.10.6",
+    "lint-staged": "^8.1.0",
+    "lodash-es": "^4.17.11",
+    "morgan": "^1.9.1",
+    "prettier": "^1.16.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-live": "^1.12.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "redux-observable": "^1.0.0",
+    "reselect": "^4.0.0",
+    "rimraf": "^2.6.3",
+    "rxjs": "^6.3.3",
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.2.4",
+    "webpack": "^4.29.0",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-dev-middleware": "^3.5.1",
+    "webpack-hot-middleware": "^2.24.3"
   },
   "scripts": {
-    "cm": "git-cz",
-    "precommit": "lint-staged",
-    "commitmsg": "commitlint -E GIT_PARAMS",
+    "doc": "start-storybook -p 9001 -c ./config/.storybook",
+    "doc:build": "rimraf ./static/storybook && build-storybook -c ./config/.storybook -o ./static/storybook",
+    "test": "jest --config=./config/jest/jest.config.js --watch",
+    "test:ci": "jest --config=./config/jest/jest.config.ci.js --coverage",
     "typecheck": "tsc --noEmit",
     "tslint": "tslint -c ./tslint.json -p ./",
     "eslint": "eslint \"**/*.js\"",
     "lint": "npm run typecheck && npm run tslint && npm run eslint",
-    "test": "jest --config=./config/jest/jest.config.js --coverage",
-    "test:watch": "npm test -- --watch",
-    "test:ci": "npm test -- --bail",
-    "test:doc": "jest --config=./config/jest/jest.config.doc.js --coverage",
+    "cm": "git-cz",
     "ci:cmlint": "commitlint -f=origin/develop -t=develop",
     "ci": "npm run lint && npm run test:ci",
-    "storybook": "start-storybook -p 9001 -c ./config/.storybook",
-    "storybook:build": "build-storybook -c ./config/.storybook -o ./docs/storybook",
-    "doc": "rimraf ./docs && npm run test:doc && npm run storybook:build",
-    "build:comp": "rimraf ./packages/components/dist && tsc -p ./config/typescript/tsconfig.build.comp.json",
+    "build:comp": "rimraf ./packages/components/dist && tsc -p ./config/typescript/tsconfig.prod.json",
     "pub": "npm run build:comp && lerna publish --conventional-commits",
     "pub:test": "npm run pub -- --skip-git --skip-npm",
     "pub:ci": "npm run pub -- --yes",
     "start": "node ./server",
-    "build": "rimraf ./static && webpack --config ./config/webpack/webpack.config.prod.js"
+    "prebuild": "rimraf ./packages/narr-material-ui-core/dist",
+    "build": "rimraf ./static && webpack --config ./config/webpack/webpack.config.prod.js",
+    "build:all": "rimraf ./static && npm run doc:build && npm run test:ci && cpy ./index.html ./static"
   },
   "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
@@ -135,13 +112,13 @@
       "@commitlint/config-conventional"
     ],
     "rules": {
-      "scope-case": [
-        0
-      ],
       "header-max-length": [
         2,
         "always",
-        90
+        100
+      ],
+      "scope-case": [
+        0
       ]
     }
   }
